--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="js/public.js"></script>
 </head>
 <body>
     <p>111111</p>
     <p>222222</p>
+    <div>知识改变命运</div>
 </body>
 </html>
